samples/_failures_safe/1761474563_29781a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a94d8d81.c: In function ‘main’:
./samples/SAFE/__tmp_a94d8d81.c:165:12: error: missing terminating " character
  165 |     printf("Type\t
      |            ^~~~~~~
./samples/SAFE/__tmp_a94d8d81.c:165:5: error: expected expression at end of input
  165 |     printf("Type\t
      |     ^~~~~~
./samples/SAFE/__tmp_a94d8d81.c:165:5: error: expected declaration or statement at end of input
